0026638: Help of vcaps Draw command mentions wrong argument